[workspace]


members= [
    'ethkey',
    'gu-actix',
    'gu-base',
    'gu-webapp',
    'gu-provider',
    'gu-hub',
    'gu-net',
    'gu-persist',
    'gu-lan',
    'gu-hardware',
    'gu-event-bus',
    'gu-model',
    'gu-client',
    'gu-hdman',
    'gu-plugin-api'
]

[profile.release]
codegen-units = 1
lto=true


