[workspace]

members = [
    "ethkey",
    "gu-actix",
    "gu-base",
    "gu-provider",
    "gu-hub",
    "gu-net",
    "gu-persist",
    "gu-lan",
    "gu-hardware",
    "gu-event-bus",
    "gu-model",
    "gu-client",
    "gu-hdman",
    "update/update-trait",
    "update/update-macro",
    "gu-plugin-api",
]

[profile.release]
codegen-units = 1
lto=true

