[package]
name = "ethkey"
version = "0.2.5"
description = "Ethereum keys management supporting keystores, signing and verification"
authors = ["Golem Factory <contact@golem.network>"]
homepage = "https://github.com/golemfactory/golem-unlimited/tree/ethsign/ethkey"
repository = "https://github.com/golemfactory/golem-unlimited"
documentation = "https://docs.rs/crate/ethkey"
license = "MIT"
edition = "2018"

[dependencies]
env_logger = "0.5"
error-chain = "0.12"
ethsign = "0.5"
log = "0.4"
parity-crypto = "0.3"
rand = "0.6"
rustc-hex = "2.0"
secp256k1 = { version = "0.12" }
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"
