[package]
name = "gu-base"
version = "0.1.0"

[dependencies]
actix = "0.7"
actix-web = { version = "0.7", default-features = false }
bytes = "0.4.10"
clap = "2.32"
daemonize = "0.3.0"
env_logger = "0.5"
flate2 = "1.0.4"
futures = "0.1"
futures-cpupool = "0.1.8"
indicatif = "0.9"
lazy_static = "1.1"
libc = "0.2.43"
log = "0.4"
prettytable-rs = "0.7"
serde_json = "1.0.33"
sha1 = "0.6.0"
tar = "0.4.18"
tokio = "0.1"

[dev-dependencies]
tempfile = "3.0"
