[package]
name = "gu-client"
version = "0.1.0"
authors = ["Filip <filip@golem.network>"]
edition="2018"

[dependencies]
gu-actix = { path="../gu-actix" }
gu-net = { path="../gu-net" }
gu-model = { path="../gu-model" }
actix = "0.7"
actix-web = {version= "0.7", default-features=false}
bytes = "0.4.10"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
url = "1.7.2"
failure = "0.1.5"

[dev-dependencies]
structopt= { version="0.2.14", default-features=false, features=["wrap_help", "suggestions", "color"]}
prettytable-rs="0.7"
