[package]
name = "gu-client"
version = "0.1.0"
authors = ["golemfactory"]
edition = "2018"

[dependencies]
gu-actix = { path = "../gu-actix" }
gu-model = { path = "../gu-model" }
gu-net = { path = "../gu-net" }

actix = "0.8"
awc="0.2.1"
actix-http="0.2.4"

bytes = "0.4.10"
failure = "0.1.5"
futures = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "1.7.2"

[dev-dependencies]
gu-actix = { path = "../gu-actix" }
gu-hardware = { path = "../gu-hardware" }

common-path = "1.0"
crossbeam-channel = "0.3"
env_logger = "0.6"
pbr = "1.0"
prettytable-rs = "0.7"
structopt = { version = "0.2.14", default-features = false, features = ["wrap_help", "suggestions", "color"] }
tar = "0.4"
tar-async = { git = "https://github.com/prekucki/tar-async.git" }
tokio-timer = "0.2"

[features]
default = []
integration_tests = []
clinfo = ["gu-hardware/clinfo"]
