[package]
name = "gu-downloader"
version = "0.1.0"
edition = "2018"

[features]
default = ["ssl"]
ssl = ["actix-web/ssl"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
semver = { version = "0.9", features = ["serde"] }
actix = "0.7"
actix-web = { version = "0.7", default-features = false }
gu-actix = { path = "../gu-actix" }
futures = "0.1"
derive_builder = "0.7"
futures-cpupool = "0.1"
crc = "1.0.0"
log = "0.4.6"
failure = "0.1"
bincode = "1.0.1"
chrono = { version = "0.4", features = ["serde"] }

