[package]
name = "gu-ethkey"
version = "0.1.1"
authors = ["Golem Unlimited Team, Piotr Chromiec <tworec@golem.network>"]

[dependencies]
log = "0.4"
env_logger = "0.5"
error-chain = "0.12"
parity-crypto = "0.2"
ethkey = { git = "https://github.com/paritytech/parity-ethereum" }
ethstore = { git = "https://github.com/paritytech/parity-ethereum" }
rand = "0.6"
rustc-hex = "1.0"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.0"
pretty_assertions = "0.5"
