[package]
name = "gu-ethkey"
version = "0.2.0"
authors = ["Golem Factory, Piotr Chromiec <tworec@golem.network>"]
license = "MIT"
edition = "2018"

[dependencies]
log = "0.4"
ethsign = "0.3"
env_logger = "0.5"
error-chain = "0.12"
parity-crypto = "0.3"
rand = "0.6"
rustc-hex = "1.0"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.0"
#pretty_assertions = "0.5"
