[package]
name = "gu-ethkey"
version = "0.2.0"
authors = ["Golem Factory, Piotr Chromiec <tworec@golem.network>"]
license = "MIT"
edition = "2018"

[dependencies]
log = "0.4"
ethsign = {git = "https://github.com/tworec/ethsign", branch = "to_keyfile"}
env_logger = "0.5"
error-chain = "0.12"
parity-crypto = "0.3"
rand = "0.6"
rustc-hex = "2.0"
serde_json = "1.0"
secp256k1 = { version = "0.12"}

[dev-dependencies]
tempfile = "3.0"
#pretty_assertions = "0.5"
