[package]
name = "gu-hardware"
version = "0.1.0"

[dependencies]
gu-actix= { path="../gu-actix" }
gu-base= { path="../gu-base" }
gu-p2p= { path="../gu-p2p" }
gu-persist = { path="../gu-persist" }

sysinfo = "0.5"
log = "0.4"
actix = "0.7"
error-chain = "0.12"
futures = "0.1"
clap = "2.32"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
actix-web = "0.7"
hostname = "^0.1"

[dependencies.cl-sys]
version="0.4"
optional=true

[dependencies.smallvec]
version="0.6"
optional=true

[features]
default=[]
clinfo=['cl-sys','smallvec']

[dev-dependencies]
gu-actix = { path = "../gu-actix" }
serde_json = "1.0"

[[example]]
name="clinfo"
path="optional-example/clinfo.rs"
required-features=["clinfo"]

[[example]]
name="discovery"
path="optional-example/discovery.rs"

