[package]
name = "gu-hardware"
version = "0.1.1"
edition = "2018"

[dependencies]
gu-actix = { path = "../gu-actix" }
gu-base = { path = "../gu-base" }
gu-net = { path = "../gu-net" }
gu-persist = { path = "../gu-persist" }

actix = "0.7"
actix-web = { version = "0.7", default-features = false }
cl-sys = { version = "0.4", optional = true }
failure = "0.1.5"
futures = "0.1"
hostname = "^0.1"
log = "0.4"
nix = "0.13.0"
num_cpus = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "0.6", optional = true }
sysinfo = "0.5"

[dev-dependencies]
gu-actix = { path = "../gu-actix" }
serde_json = "1.0"

[features]
default = []
clinfo = ["cl-sys", "smallvec"]

[[example]]
name = "clinfo"
path = "optional-example/clinfo.rs"
required-features = ["clinfo"]

[[example]]
name = "discovery"
path = "optional-example/discovery.rs"


