[package]
name = "gu-hdman"
version = "0.1.0"
edition = "2018"

[dependencies]

tokio-process="0.2.3"
serde_derive = "1.0"
serde = "1.0.80"
semver = { version = "0.9", features = ["serde"] }
actix="0.7"
futures="0.1"
tokio-io="0.1.11"

gu-actix = { path = "../gu-actix" }

[dev-dependencies]
tokio-stdin="0.1.1"
serde_json="1.0"