[package]
name = "gu-hub"
version = "0.2.3"
license = "GPL-3.0"
publish = false
authors = ["golemfactory"]
edition = "2018"

[dependencies]
ethkey = { path = "../ethkey" }
gu-actix = { path = "../gu-actix" }
gu-base = { path = "../gu-base" }
gu-event-bus = { path = "../gu-event-bus" }
gu-hardware = { path = "../gu-hardware" }
gu-lan = { path = "../gu-lan" }
gu-model = { path = "../gu-model" }
gu-net = { path = "../gu-net" }
gu-persist = { path = "../gu-persist" }
gu-downloader = { path="../gu-downloader"}

tempfile = "3.1.0"
actix = "0.7"
actix-web = { version = "0.7", default-features = false }
actix_derive = "0.3.0"
bytes = "0.4.10"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.32"
failure = "0.1"
futures = "0.1"
hostname = "^0.1"
log = "0.4"
mdns = { git = "https://github.com/plietar/rust-mdns" }
prettytable-rs = "0.7"
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = { version = "0.6.0", features=["std"] }
zip = "0.4"
openssl = { version = "0.10", features = ["vendored"], optional=true }

[build-dependencies]
vergen = "3.0.4"

[features]
default=[]
#default=["actix-web/rust-tls"]
clinfo=["gu-hardware/clinfo"]
ssl=["openssl/vendored", "actix-web/ssl"]

[package.metadata.deb]
assets = [
    ["webapp/css/*", "usr/lib/golemu/webapp/css/", "644"],
    ["webapp/directives/*", "usr/lib/golemu/webapp/directives/", "644"],
    ["webapp/fonts/*", "usr/lib/golemu/webapp/fonts/", "644"],
    ["webapp/icons/*", "usr/lib/golemu/webapp/icons/", "644"],
    ["webapp/services/*", "usr/lib/golemu/webapp/services/", "644"],
    ["webapp/*", "usr/lib/golemu/webapp/", "644"],
    ["target/release/gu-hub", "usr/bin/", "755"],
    ["deployment/gu-hub.service", "lib/systemd/system/", "644"],
]

maintainer-scripts = "deployment/deb"
features=['ssl']

