[package]
name = "gu-lan"
version = "0.1.0"
authors = ["Hubert Banaszewski <hubert.banaszewski@golem.network>"]


[dependencies]
gu-actix = { path = "../gu-actix" }
gu-net = { path = "../gu-net" }
gu-base = { path = "../gu-base" }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
env_logger = "0.5"
error-chain = "0.12"
log = "0.4"

clap = "2.32"
bytes = "0.4"
dns-parser = "0.8"
socket2 = { version = "0.3", features = ["reuseport"] }
prettytable-rs = "0.7"
rand = "0.5.5"

futures = "0.1"
tokio = "0.1"
tokio-codec = "0.1"
actix = "0.7"
actix-web = "0.7"