[package]
name = "gu-lan"
version = "0.1.0"
authors = ["Hubert Banaszewski <hubert.banaszewski@golem.network>"]

[dependencies]
gu-actix = { path = "../gu-actix" }
gu-base = { path = "../gu-base" }
gu-net = { path = "../gu-net" }

actix = "0.7"
actix-web = { version = "0.7", default-features = false }
bytes = "0.4"
clap = "2.32"
dns-parser = "0.8"
env_logger = "0.5"
error-chain = "0.12"
futures = "0.1"
hostname = "^0.1"
log = "0.4"
mdns = { git = "https://github.com/plietar/rust-mdns" }
prettytable-rs = "0.7"
rand = "0.5.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
socket2 = { version = "0.3", features = ["reuseport"] }
tokio = "0.1"
tokio-codec = "0.1"

