[package]
name = "gu-model"
version = "0.1.0"
authors = ["Golem Factory"]
edition='2018'

[features]
default=['hash']
hash=['digest', 'sha3', 'sha-1']

[dependencies]
actix = "0.7"
actix-web = {version= "0.7", default-features=false}
serde_derive = "1.0"
serde_json="1.0"
serde = "1.0.80"
gu-net = { path = "../gu-net" }
chrono = { version = "0.4", features = ["serde"] }
failure="0.1"

digest = {version = "0.8.0", optional=true}
sha3={version="0.8.1", optional=true}
sha-1={version="0.8.1", optional=true}

[dev-dependencies]
