[package]
name = "gu-model"
version = "0.1.0"
authors = ["Golem Factory"]
edition = "2018"

[dependencies]
gu-net = { path = "../gu-net", optional=true }

actix = { version = "0.7", optional= true }
actix-web = { version = "0.7", default-features = false, optional=true }
chrono = { version = "0.4", features = ["serde"] }
digest = { version = "0.8.0", optional = true }
failure = "0.1"
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = { version = "0.8.1", optional = true }
sha3 = { version = "0.8.1", optional = true }

[features]
default = ["hash", "with-actix"]
hash = ["digest", "sha3", "sha-1"]
with-actix=["actix", "actix-web", "gu-net"]
