[package]
name = "gu-net"
version = "0.1.0"

[dependencies]
gu-actix = { path = "../gu-actix" }

actix = "0.7"
actix-web = { version = "0.7", default-features = false }
byteorder = "1.2"
digest = "0.7"
env_logger = "0.5"
error-chain = "0.12"
futures = "0.1"
lazy_static = "1.1.0"
log = "0.4"
quick-protobuf = "0.6"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha3 = "0.7"
smallvec = "0.6"
tokio-io = "0.1"

