[package]
name = "gu-p2p"
version = "0.1.0"

[dependencies]

futures="0.1"
tokio-io="0.1"
actix = "0.7"
actix-web = "0.7"

sha3="0.7"
digest = "0.7"
rand = "0.5"

quick-protobuf = "0.6"
smallvec = "0.6"
error-chain = "0.12"

serde = "1.0"
serde_derive = "1.0"
serde_json="1.0"
byteorder = "1.2"

log = "0.4"
env_logger = "0.5"


gu-actix = { path = "../gu-actix" }