[package]
name = "gu-persist"
version = "0.1.0"

[dependencies]
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
error-chain = "0.12"
futures = "0.1"
directories = "1.0"
bytes = "0.4.10"

actix = "0.7"
actix_derive = "0.3"
actix-web = { version = "0.7", default-features=false}

tokio-fs = "0.1"
tokio-io = "0.1"

gu-actix = { path = "../gu-actix" }
gu-base = { path = "../gu-base" }

[dev-dependencies]
env_logger = "0.5"
