[package]
name = "gu-persist"
version = "0.1.0"

[features]
uds_server=[]

[dependencies]
gu-actix = { path = "../gu-actix" }
gu-base = { path = "../gu-base" }

actix = "0.7"
actix_derive = "0.3"
bytes = "0.4.10"
directories = "1.0"
error-chain = "0.12"
futures = "0.1"
lazy_static = "1.1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-fs = "0.1"
tokio-io = "0.1"
tokio-uds = "0.2"

[target.'cfg(unix)'.dependencies]
actix-web = { version = "0.7", features = ["uds"], default-features = false }

[target.'cfg(not(unix))'.dependencies]
actix-web = { version = "0.7", default-features = false }

[dev-dependencies]
env_logger = "0.5"
