[package]
name = "gu-plugin-api"
version = "0.1.0"
authors = ["golemfactory"]
edition = "2018"

[dependencies]
actix = "0.7"
log="0.4"
futures="0.1.25"
serde_derive = "1.0"
serde="1.0"
serde_json="1.0"
http="0.1.1"

[dependencies.actix-web]
version = "1.0.0-alpha.3"
default-features = false
features = ["rust-tls", "client"]

