[package]
name = "gu-plugin-api"
version = "0.1.0"
authors = ["golemfactory"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = { version = "1.0.0-alpha.3", default-features = false, features = ["rust-tls", "client"] }
futures = "0.1.25"
http = "0.1.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

