[package]
name = "gu-provider"
version = "0.1.1"
license = "MIT"
publish=false
authors=["golemfactory"]

[features]
default=[]
clinfo=["gu-hardware/clinfo"]

[dependencies]
futures="0.1"
tokio-io="0.1"
actix = "0.7"
actix-web = {version= "0.7", features = []}
serde_derive = "1.0"
serde = "1.0.80"

log = "0.4"
clap = "2.32"
error-chain = "0.12"
tokio-uds = "0.2"
uuid = { version = "0.7", features = ["v4"] }
bytes = "0.4"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
tar = "0.4"

mdns = { git = "https://github.com/plietar/rust-mdns", rev = "0974ab4f" }

gu-base= { path="../gu-base" }
gu-actix = { path = "../gu-actix" }
gu-net = { path = "../gu-net" }
gu-persist = { path = "../gu-persist" }
gu-lan = { path = "../gu-lan"}
gu-ethkey = { path = "../gu-ethkey"}
gu-hardware = { path = "../gu-hardware"}
gu-envman-api = { path = "../gu-envman-api" }

[package.metadata.deb]
depends = "$auto, systemd"
assets = [
    ["target/release/gu-provider", "usr/bin/", "755"],
    ["deployment/gu-provider.service", "lib/systemd/system/", "644"],
]
#conf-files=["etc/golem-monitor-replicator"]

maintainer-scripts="deployment/deb"

