[package]
name = "gu-provider"
version = "0.2.0"
license = "GPL-3.0"
publish = false
authors = ["golemfactory"]
edition = "2018"

[dependencies]
ethkey = { path = "../ethkey" }
gu-actix = { path = "../gu-actix" }
gu-base = { path = "../gu-base" }
gu-hardware = { path = "../gu-hardware" }
gu-hdman = { path = "../gu-hdman" }
gu-lan = { path = "../gu-lan" }
gu-model = { path = "../gu-model" }
gu-net = { path = "../gu-net" }
gu-persist = { path = "../gu-persist" }

actix = "0.7"
actix-web = { version = "0.7", default-features = false }
actix_derive = "0.3.0"
bytes = "0.4"
clap = "2.32"
crc = "1.8.1"
crossbeam-channel = "0.3.6"
error-chain = "0.12"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
futures = "0.1"
futures-cpupool = "0.1"
log = "0.4"
mdns = { git = "https://github.com/plietar/rust-mdns" }
windows-service = { version = "0.2.0", optional = true }
prettytable-rs = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.32"
tar = "0.4"
tokio-io = "0.1"
tokio-uds = "0.2"
uuid = { version = "0.7", features = ["v4"] }

async_docker = { git = "https://github.com/golemfactory/async-docker", optional = true, branch = "swagger", version = "0.1.1" }
tar-async = { git = "https://github.com/prekucki/tar-async.git" }
#async_docker = { path = "../../async-docker", optional = true }

[build-dependencies]
vergen = "3"

[features]
default=['env-docker']
win-service=['windows-service']
clinfo=["gu-hardware/clinfo"]
env-docker=['async_docker']

[package.metadata.deb]
depends = "$auto, systemd"
assets = [
    ["target/release/gu-provider", "usr/bin/", "755"],
    ["deployment/gu-provider.service", "lib/systemd/system/", "644"],
]

maintainer-scripts = "deployment/deb"
