[package]
name = "gu-webapp"
version = "0.1.0"
authors = ["Przemysław K. Rekucki <przemyslaw.rekucki@golem.network>"]

[dependencies]
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
actix = "0.7"
actix-web ="0.7"

digest = "0.8"
sha-1="0.8"
mime="0.3.9"
regex = "1"